model Booking {
  id                 String           @id @default(uuid())
  bookingNumber      String           @unique
  guestId            String
  checkInDate        DateTime
  checkOutDate       DateTime
  actualCheckIn      DateTime?
  actualCheckOut     DateTime?
  numberOfGuests     Int              @default(1)
  numberOfChildren   Int              @default(0)
  specialRequests    String?
  totalAmount        Float
  taxAmount          Float            @default(0)
  serviceCharges     Float            @default(0)
  discountAmount     Float            @default(0)
  finalAmount        Float
  status             BookingStatus    @default(PENDING)
  source             String?
  notes              String?
  cancellationReason String?
  createdById        String?
  updatedById        String?
  createdAt          DateTime         @default(now())
  updatedAt          DateTime         @updatedAt
  services           BookingService[]
  createdBy          Admin?           @relation("AdminCreatedBookings", fields: [createdById], references: [id])
  guest              Guest            @relation(fields: [guestId], references: [id])
  updatedBy          Admin?           @relation("AdminUpdatedBookings", fields: [updatedById], references: [id])
  payments           Payment[]
  reviews            Review[]
  roomBookings       RoomBooking[]
  roomTypeId        String
  roomType          RoomType   @relation("BookingRoomType", fields: [roomTypeId], references: [id])

  @@index([checkInDate])
  @@index([checkOutDate])
  @@index([status])
  @@index([guestId])
  @@map("bookings")
}

model RoomBooking {
  id          String   @id @default(uuid())
  roomId      String
  bookingId   String
  roomRate    Float
  checkInDate DateTime
  checkOutDate DateTime
  assignedAt  DateTime @default(now())
  status      RoomBookingStatus @default(ASSIGNED)
  notes       String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  
  room        Room     @relation(fields: [roomId], references: [id], onDelete: Cascade)
  booking     Booking  @relation(fields: [bookingId], references: [id], onDelete: Cascade)

  @@unique([roomId, bookingId])
  @@index([roomId])
  @@index([bookingId])
  @@index([checkInDate])
  @@index([checkOutDate])
  @@map("room_bookings")
}
