model Review {
  id         String   @id @default(uuid())
  bookingId  String
  guestId    String
  rating     Int
  title      String?
  comment    String?
  response   String?
  isVerified Boolean  @default(false)
  isPublic   Boolean  @default(true)
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  booking    Booking  @relation(fields: [bookingId], references: [id])
  guest      Guest    @relation(fields: [guestId], references: [id])

  @@index([guestId])
  @@index([rating])
  @@index([isPublic])
  @@map("reviews")
}

model LoyaltyProgram {
  id          String   @id @default(uuid())
  guestId     String   @unique
  points      Int      @default(0)
  tier        String   @default("BRONZE")
  joinDate    DateTime @default(now())
  lastUpdated DateTime @updatedAt
  guest       Guest    @relation(fields: [guestId], references: [id])

  @@map("loyalty_programs")
}
