model Payment {
  id              String        @id @default(uuid())
  bookingId       String
  amount          Float
  currency        String        @default("THB")
  paymentMethod   PaymentMethod
  status          PaymentStatus @default(PENDING)
  transactionId   String?
  gatewayResponse Json?
  paymentDetails  Json?         // SCB QR data, webhook data, refund info, etc.
  paidAt          DateTime?
  description     String?
  notes           String?
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
  booking         Booking       @relation(fields: [bookingId], references: [id])
  refunds         Refund[]

  @@index([bookingId])
  @@index([paymentMethod])
  @@index([status])
  @@map("payments")
}

model Refund {
  id          String       @id @default(uuid())
  paymentId   String
  amount      Float
  reason      String
  status      RefundStatus @default(PENDING)
  processedAt DateTime?
  notes       String?
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
  payment     Payment      @relation(fields: [paymentId], references: [id])

  @@index([paymentId])
  @@index([status])
  @@map("refunds")
}

model DailyRevenue {
  id             String   @id @default(uuid())
  date           DateTime @unique @db.Date
  roomRevenue    Float    @default(0)
  serviceRevenue Float    @default(0)
  totalRevenue   Float    @default(0)
  occupancyRate  Float    @default(0)
  adr            Float    @default(0)
  revpar         Float    @default(0)
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  @@index([date])
  @@map("daily_revenue")
}
