model RoomType {
  id              String          @id @default(uuid())
  code            String          @unique
  name            Json
  description     Json?
  basePrice       Float
  capacity        Int
  hasPoolView     Boolean         @default(false)
  thumbnailUrl    String?
  isActive        Boolean         @default(true)
  createdAt       DateTime        @default(now())
  updatedAt       DateTime        @updatedAt
  bannerImage     String?
  bedCount        Int             @default(1)
  galleryImages   String[]
  mainImage       String?
  petFriendly     Boolean         @default(false)
  seasonalPricing Json?
  smokingAllowed  Boolean         @default(false)
  view            String?
  bedType         BedTypeEnum
  amenities       AmenitiesEnum[]
  roomImages      RoomImage[]
  rooms           Room[]
  bookings        Booking[]       @relation("BookingRoomType")

  @@index([code])
  @@index([isActive])
}

model Room {
  id              String           @id @default(uuid())
  roomNumber      String           @unique
  roomTypeId      String
  status          RoomStatus       @default(AVAILABLE)
  floor           Int
  size            Float?
  accessible      Boolean          @default(false)
  lastCleaned     DateTime?
  lastMaintenance DateTime?
  notes           String?
  isActive        Boolean          @default(true)
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt
  roomBookings    RoomBooking[]
  maintenanceLogs MaintenanceLog[]
  roomType        RoomType         @relation(fields: [roomTypeId], references: [id])

  @@index([status])
  @@index([roomTypeId])
  @@index([floor])
  @@index([isActive])
  @@map("rooms")
}

model RoomImage {
  id         String   @id @default(uuid())
  url        String
  alt        String?
  caption    Json?
  isPrimary  Boolean  @default(false)
  sortOrder  Int      @default(0)
  createdAt  DateTime @default(now())
  roomTypeId String
  roomType   RoomType @relation(fields: [roomTypeId], references: [id], onDelete: Cascade)

  @@index([roomTypeId])
  @@map("room_images")
}

model MaintenanceLog {
  id          String    @id @default(uuid())
  roomId      String
  type        String
  description String
  cost        Float?
  performedBy String
  startTime   DateTime
  endTime     DateTime?
  isCompleted Boolean   @default(false)
  notes       String?
  createdAt   DateTime  @default(now())
  room        Room      @relation(fields: [roomId], references: [id])

  @@index([roomId])
  @@index([isCompleted])
  @@index([type])
  @@map("maintenance_logs")
}
