model Service {
  id               String           @id @default(uuid())
  code             String           @unique
  category         ServiceCategory
  status           ServiceStatus    @default(ACTIVE)
  name             Json
  description      Json
  basePrice        Float
  currency         String           @default("THB")
  taxRate          Float            @default(0.07)
  isActive         Boolean          @default(true)
  availableFrom    DateTime?
  availableTo      DateTime?
  maxQuantity      Int?
  requiresApproval Boolean          @default(false)
  notes            String?
  createdAt        DateTime         @default(now())
  updatedAt        DateTime         @updatedAt
  bookingServices  BookingService[]

  @@index([category])
  @@index([status])
  @@index([isActive])
  @@map("services")
}

model BookingService {
  id         String   @id @default(uuid())
  bookingId  String
  serviceId  String
  quantity   Int      @default(1)
  unitPrice  Float
  totalPrice Float
  notes      String?
  createdAt  DateTime @default(now())
  booking    Booking  @relation(fields: [bookingId], references: [id], onDelete: Cascade)
  service    Service  @relation(fields: [serviceId], references: [id])

  @@index([bookingId])
  @@index([serviceId])
  @@map("booking_services")
}
