model AuditLog {
  id        String      @id @default(uuid())
  adminId   String
  action    AuditAction
  entity    String
  entityId  String
  oldValues Json?
  newValues Json?
  ipAddress String?
  userAgent String?
  createdAt DateTime    @default(now())
  admin     Admin       @relation(fields: [adminId], references: [id])

  @@index([adminId])
  @@index([entity, entityId])
  @@index([createdAt])
  @@index([action])
  @@map("audit_logs")
}

model Settings {
  id        String   @id @default(uuid())
  key       String   @unique
  value     Json
  category  String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([category])
  @@map("settings")
}
