model Admin {
  id              String     @id @default(uuid())
  email           String     @unique
  username        String     @unique
  password        String
  firstName       String
  lastName        String
  role            String     @default("ADMIN")
  isActive        Boolean    @default(true)
  lastLogin       DateTime?
  createdAt       DateTime   @default(now())
  updatedAt       DateTime   @updatedAt
  auditLogs       AuditLog[]
  createdBookings Booking[]  @relation("AdminCreatedBookings")
  updatedBookings Booking[]  @relation("AdminUpdatedBookings")

  @@map("admins")
}

model Guest {
  id             String          @id @default(uuid())
  email          String          @unique
  phone          String?
  whatsapp       String?
  firstName      String
  lastName       String
  dateOfBirth    DateTime?
  nationality    String?
  passport       String?
  address        String?
  city           String?
  country        String?
  postalCode     String?
  preferences    String[]
  status         GuestStatus     @default(ACTIVE)
  vipLevel       Int             @default(0)
  totalStays     Int             @default(0)
  totalSpent     Float           @default(0)
  notes          String?
  createdAt      DateTime        @default(now())
  updatedAt      DateTime        @updatedAt
  bookings       Booking[]
  loyaltyProgram LoyaltyProgram?
  reviews        Review[]

  @@map("guests")
}
